--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 
 cnbc-awards/.DS_Store
+festivalcreative-lps/section/home/.DS_Store
+festivalcreative-lps/src/css/swiperjs/.DS_Store
+festivalcreative-lps/src/image/.DS_Store
+festivalcreative-lps/src/image/home/.DS_Store
+festivalcreative-lps/src/image/home/banner/.DS_Store
+festivalcreative-lps/src/image/home/form/.DS_Store
+festivalcreative-lps/src/image/home/timeline/.DS_Store
+festivalcreative-lps/src/image/navbar/.DS_Store
