--- a/yamaha-youth/package.json
+++ b/yamaha-youth/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "animate.css": "^4.1.1",
-    "aos": "^2.3.4"
+    "aos": "^2.3.4",
+    "bootstrap": "^5.3.1",
+    "jquery": "^3.7.1"
   }
 }
