--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ festivalcreative-lps/src/image/home/banner/.DS_Store
 festivalcreative-lps/src/image/home/form/.DS_Store
 festivalcreative-lps/src/image/home/timeline/.DS_Store
 festivalcreative-lps/src/image/navbar/.DS_Store
+festivalcreative-lps/src/image/home/headline/.DS_Store
